--- a/vercel.json
+++ b/vercel.json
@@ -1,3 +1,16 @@
 {
-  "rewrites": [{ "source": "/(.*)", "destination": "/" }]
+  "rewrites": [
+    {
+      "source": "/events/:id",
+      "destination": "https://cqqnipzdmtfbmvsrbmso.supabase.co/functions/v1/event-og?id=:id",
+      "has": [
+        {
+          "type": "header",
+          "key": "user-agent",
+          "value": ".*(facebookexternalhit|twitterbot|linkedinbot|whatsapp|telegrambot|slackbot|discordbot|googlebot).*"
+        }
+      ]
+    },
+    { "source": "/(.*)", "destination": "/" }
+  ]
 }
