--- a/vercel.json
+++ b/vercel.json
@@ -1,11 +1,16 @@
 {
+  "functions": {
+    "api/e/[slug].ts": {
+      "runtime": "@vercel/node@5"
+    }
+  },
   "rewrites": [
     {
       "source": "/e/:slug",
       "destination": "/api/e/:slug"
     },
     {
-      "source": "/(.*)",
+      "source": "/((?!api/).*)",
       "destination": "/index.html"
     }
   ]
